fixed overflow in html

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+html, body{
+    overflow-x: hidden;
+    
+}
+
 /* top bar content*/
 .top-bar{
     height: 50px;
